# discoveryd

./: Cargo.toml  Dockerfile  README.md  discoveryd.service  docker-compose.yml
sql/: structure.sql
src/: main.rs
