[package]
name = "discoveryd"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7"
lazy_static = "1.4"
rocket = "0.5.0-rc.2"
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_mysql"] }
sqlx = { version = "0.6", default-features = false, features = ["macros", "offline", "migrate", "runtime-tokio-rustls"]}
